# book

./: .gitignore  Makefile  README.md  book.cabal  book.md  stack.yaml  title.txt
app/: Main.hs
templates/: book.css  book.js  default.html5
